--- a/src/app/pages/signin/signin.component.html
+++ b/src/app/pages/signin/signin.component.html
@@ -8,7 +8,7 @@
             <p class="subtitle has-text-dark">
               Insira seus dados para acessar sua conta
             </p>
-            <form (submit)="signin()">
+            <form (submit)="signin()" ngNativeValidate>
               <div class="field">
                 <label for="email">E-mail</label>
                 <div class="control">
