--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -8,7 +8,7 @@
             <p class="subtitle has-text-dark">
               Insira seus dados para cadastrar sua conta
             </p>
-            <form (submit)="signup()">
+            <form (submit)="signup()" ngNativeValidate>
               <div class="field">
                 <label for="name">Nome</label>
                 <div class="control">
