--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,7 +1,7 @@
 $primary: #156fe4;
 // $link: #8715e4;
-// $info: #15a9e4;
-$success: #83e415;
-$danger: #e42d15;
+$info: #e48315;
+$success: #15e453;
+$danger: #e41515;
 
 $card-radius: 6px;
