--- a/src/app/pages/admin/admin-ratings/admin-ratings.component.html
+++ b/src/app/pages/admin/admin-ratings/admin-ratings.component.html
@@ -51,7 +51,7 @@
               <small>{{ rating.usuario }}</small>
             </div>
             <footer class="card-footer">
-              <a [routerLink]="'/' + rating.estabelecimento_id" class="card-footer-item">
+              <a [routerLink]="'/estabelecimentos/' + rating.estabelecimento_id" class="card-footer-item">
                 <span class="icon">
                   <i class="fas fa-eye"></i>
                 </span>
