--- a/src/app/pages/signin/signin.component.html
+++ b/src/app/pages/signin/signin.component.html
@@ -40,6 +40,8 @@
               </div>
               <br>
               <div class="has-text-centered">
+                <a href="/recuperar">Esqueci a senha</a>
+                <hr>
                 <a href="/cadastrar">Ainda não tenho uma conta</a>
               </div>
             </form>
