--- a/src/app/pages/admin/admin-places/admin-places.component.html
+++ b/src/app/pages/admin/admin-places/admin-places.component.html
@@ -27,7 +27,7 @@
       <div class="columns is-multiline">
         <div class="column is-3">
           <div class="field">
-            <label for="estabelecimento">Nome</label>
+            <label for="estabelecimento">Nome do estabelecimento</label>
             <div class="control">
               <input [(ngModel)]="filter.titulo" class="input" type="text" id="estabelecimento" name="estabelecimento">
             </div>
@@ -189,7 +189,7 @@
               </div>
             </div>
             <footer class="card-footer">
-              <a [routerLink]="'/' + place.id" class="card-footer-item">
+              <a [routerLink]="'/estabelecimentos/' + place.id" class="card-footer-item">
                 <span class="icon">
                   <i class="fas fa-eye"></i>
                 </span>
