--- a/src/app/pages/place/place.component.html
+++ b/src/app/pages/place/place.component.html
@@ -46,6 +46,12 @@
                 </span>
                 <span>sinalização</span>
               </span>
+              <span class="tag" *ngIf="place.pap">
+                <span class="icon">
+                  <i class="fas fa-smile-beam"></i>
+                </span>
+                <span>posicionamento atitudinal positivo</span>
+              </span>
             </div>
           </div>
           <div class="box">
