feat: privacy warning on rating

--- a/src/app/pages/new-rating/new-rating.component.html
+++ b/src/app/pages/new-rating/new-rating.component.html
@@ -57,6 +57,7 @@
               </div>
             </div>
           </div>
+          <p>Ao avaliar um estabelecimento você concorda em publicar a avaliação juntamente com o seu nome.</p>
           <br>
           <div class="field">
             <button type="submit" class="button is-fullwidth is-primary">Avaliar</button>
