feat: info changes, user list, seo, navbar update fix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
+<nav class="navbar is-fixed-top" role="navigation" aria-label="barra de navegação">
   <div class="container">
     <div class="navbar-brand is-relative">
       <a class="navbar-item" routerLink="/" tabindex="0">
         <span class="title is-4 has-cs-subtitle">
-          <span class="icon">
+          <span class="icon" aria-hidden="true">
             <i class="fab fa-accessible-icon"></i>
           </span>
           <span>
@@ -40,6 +40,9 @@
             <a routerLink="/admin/avaliacoes" class="navbar-item" tabindex="0">
               Avaliações
             </a>
+            <a routerLink="/admin/usuarios" class="navbar-item" tabindex="0">
+              Usuários
+            </a>
           </div>
         </div>
       </div>
@@ -50,7 +53,7 @@
               <span>
                 Sair
               </span>
-              <span class="icon">
+              <span class="icon" aria-hidden="true">
                 <i class="fas fa-sign-out-alt"></i>
               </span>
             </a>
@@ -74,10 +77,10 @@
     <p>
       OSC Conexão Solidária - CNPJ 24.236.775/0001-29
       <br>
-      <a href="mailto:conexaosolidaria@rsconexaosolidaria.org">conexaosolidaria@rsconexaosolidaria.org</a>
+      <a href="mailto:cs@rsconexaosolidaria.org">cs@rsconexaosolidaria.org</a>
     </p>
     <hr>
-    <p>Desenvolvido por <a href="https://unze.com.br" target="_blank">Unze</a></p>
+    <p>Desenvolvido por <a href="https://unze.com.br" rel="nofollow" target="_blank">Unze</a></p>
   </div>
 </footer>
 <ngx-ui-loader
