--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,11 @@
 .has-cs-subtitle {
   &:after {
-    content: "por Conexão Solidária";
+    content: "por Conexão Solidária RS";
     position: absolute;
     width: 100%;
     font-size: 11px;
     bottom: 4px;
-    left: 89px;
+    left: 72px;
     color: #888;
   }
 }
