--- a/src/app/pages/signin/signin.component.html
+++ b/src/app/pages/signin/signin.component.html
@@ -17,6 +17,7 @@
                     class="input"
                     name="email"
                     id="email"
+                    autocomplete="email"
                     required
                     [(ngModel)]="login.email">
                 </div>
