--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,7 +1,7 @@
 $primary: #156fe4;
 // $link: #8715e4;
 $info: #e48315;
-$success: #15e453;
+$success: hsl(135, 83%, 58%);
 $danger: #e41515;
 
 $card-radius: 6px;
